implement object detection & translation
